# vyra_base_python

./: .buildinfo  .coverage  .gitignore  BLUEPRINT_REFACTORING_PLAN.md  CHANGELOG.md  IMPLEMENTATION_PHASE1_COMPLETE.md  IMPLEMENTATION_PHASE2_COMPLETE.md  IMPLEMENTATION_PHASE3_4_COMPLETE.md  Makefile  README.md  REFACTORING_STATUS.md  TRANSPORT_PARAM_FIXES_CHECKLIST.md  TRANSPORT_REFACTOR_STATUS.md  VERSIONING.md  _run_bcrypt_tests.py  conftest.py  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  test_debug_jwt_temp.py  test_simple.py  test_simple.sqlite  versions.md  vyra_base.com.datalayer.html  vyra_base.com.feeder.html  vyra_base.com.html  vyra_base.core.html  vyra_base.defaults.html  vyra_base.helper.html  (+3 more)
.doctrees/: index.doctree  installation.doctree  modules.doctree  quickstart.doctree  vyra_base.com.datalayer.doctree  vyra_base.com.doctree  vyra_base.com.feeder.doctree  vyra_base.core.doctree  vyra_base.defaults.doctree  vyra_base.doctree  vyra_base.helper.doctree  vyra_base.state.doctree  vyra_base.storage.doctree
_modules/: index.html  vyra_base.html
_sources/: installation.rst.txt  quickstart.rst.txt  vyra_base.com.datalayer.rst.txt  vyra_base.com.feeder.rst.txt  vyra_base.com.rst.txt  vyra_base.helper.rst.txt  vyra_base.rst.txt  vyra_base.state.rst.txt  vyra_base.storage.rst.txt
devel/: SECURITY_IMPLEMENTATION_SUMMARY.md
docs/: COMMUNICATION_COMPLETION_SUMMARY.md  MONITORING_INTEGRATION.md  QUICK_START_INTERFACE_DESCRIPTORS.md  STRUCTURE.md  TRANSLATION_GUIDE.md  auto_translate.py  build_multilingual.sh  com.rst  conf.py  core.rst  helper.rst  index.rst  installation.rst  interface_architecture.md  interfaces.rst  interfaces_guide.rst  modules.rst  plugin.rst  quickstart.rst  requirements.txt  security.rst  state.rst  statemachine.rst  storage.rst  vyra_base.com.datalayer.rst  vyra_base.com.feeder.rst  vyra_base.com.rst  vyra_base.core.rst  vyra_base.defaults.rst  vyra_base.helper.rst  vyra_base.rst  vyra_base.state.rst  vyra_base.storage.rst
examples/: README.md  communication_demo.py  (+9 more)
src/vyra_base/interfaces/: CMakeLists.template.txt  README.md  package.xml
src/vyra_base/interfaces/action/: InitiateUpdate.action  VBASEInitiateUpdate.action
src/vyra_base/interfaces/callable/: VBASEGetInterfaceList.srv  VBASEGetParam.srv  VBASEStatePause.srv  VBASEStateReset.srv
src/vyra_base/interfaces/callable.DEPRECATED/: VBASEGetLogs.srv  VBASEReadAllParams.srv
src/vyra_base/interfaces/config/: RESERVED.list  base_metadata.json  base_permissions.xml  core_meta.json  module_metadata._json  security_metadata.json  statemachine_metadata.json  updater_metadata._json  vyra_base_permissions.xml  vyra_base_policy.xml  vyra_com.meta.json  vyra_com_meta.json  vyra_core.meta.json  vyra_core_meta.json  vyra_plugin.meta.json  vyra_security.meta.json  vyra_security_meta.json  vyra_skills.meta.json  vyra_state.meta.json  vyra_state_meta.json
src/vyra_base/interfaces/msg/: ErrorFeed.msg  SafetyMetadata.msg  StateFeed.msg  VBASEErrorFeed.msg  VBASEErrorFeed.proto  VBASEKeyValue.msg  VBASENewsFeed.msg  VBASENewsFeed.proto  VBASESecurityMetadata.msg  VBASEStateFeed.msg  VBASEStateFeed.proto  VBASEUpdateParamEvent.msg  VBASEUpdateParamEvent.proto  VBASEVolatileList.msg  VBASEVolatileSet.msg
src/vyra_base/interfaces/msg/_base/: VBASEVolatileHash.msg
src/vyra_base/interfaces/proto/: GetInterfaceList.proto  GetLogs.proto  GetParam.proto  GetUpdateParamEventTopic.proto  HealthCheck.proto  ReadAllParams.proto  SecurityRequestAccess.proto  SetParam.proto  StateInitialize.proto  StatePause.proto  StateReset.proto  StateResume.proto  StateStop.proto  VBASEGetLogs.proto  VBASEGetParam.proto  VBASEGetUpdateParamEventTopic.proto  VBASEHealthCheck.proto  VBASEInitiateUpdate.proto  VBASELoggerStream.proto.DEPRECATED  VBASENewsFeed.proto  VBASEReadAllParams.proto  VBASESecurityMetadata.proto  VBASESecurityRequestAccess.proto  VBASEStateFeed.proto  VBASEStatePause.proto  VBASEStateReset.proto  VBASEStateStop.proto  VBASEUpdateParamEvent.proto
src/vyra_base/interfaces/proto.DEPRECATED/: VBASEErrorFeed.proto  VBASEGetInterfaceList.proto  VBASEKeyValue.proto.DEPRECATED  VBASESafetyMetadata.proto.DEPRECATED  VBASESetParam.proto  VBASEStateInitialize.proto  VBASEStateResume.proto  VBASEVolatileHash.proto.DEPRECATED  VBASEVolatileList.proto.DEPRECATED  VBASEVolatileSet.proto.DEPRECATED  VBASEVolatileString.proto.DEPRECATED
src/vyra_base/interfaces/speaker/: SafetyMetadata.msg  VBASELoggerStream.msg
src/vyra_base/interfaces/speaker.DEPRECATED/: VBASENewsFeed.msg  VBASEStateFeed.msg  VBASEVolatileHash.msg  VBASEVolatileString.msg
src/vyra_base/interfaces/srv/: MMRegisterModule.srv  MMRequestSign.srv  MMUnregisterModule.srv  RequestAcess.srv  VBASEGetInterfaceList.proto  VBASEGetInterfaceList.srv  VBASEGetLogs.srv  VBASEGetParam.proto  VBASEGetParam.srv  VBASEGetParamEventTopic.srv  VBASEGetUpdateParamEventTopic.proto  VBASEGetUpdateParamEventTopic.srv  VBASEGet_interface_list.proto  VBASEGet_interface_list.srv  VBASEGet_parameter.proto  VBASEGet_parameter.srv  VBASEHealthCheck.srv  VBASEInitialize.proto  VBASEInitialize.srv  VBASEParam_changed_topic.proto  VBASEParam_changed_topic.srv  VBASEPause.proto  VBASEPause.srv  VBASEReadAllParams.srv  VBASERequestAccess.srv  VBASERequest_access.proto  VBASERequest_access.srv  VBASEReset.proto  VBASEReset.srv  VBASEResume.proto  VBASEResume.srv  VBASESecurityRequestAccess.proto  VBASESecurityRequestAccess.srv  VBASESetParam.proto  VBASESetParam.srv  VBASESet_parameter.proto  VBASESet_parameter.srv  VBASEStateInitialize.proto  VBASEStateInitialize.srv  VBASEStatePause.proto  (+9 more)
src/vyra_base/interfaces/srv/_base/: VBASEGetLogs.srv  VBASERequestAccess.srv
src/vyra_base/interfaces/tools/: __init__.py  generate_interfaces.py
(+780 files in other folders)
