[tool.poetry]
name = "vyra_base"
version = "0.1.0"
description = "Base library for V.Y.R.A. modules written in Python"
authors = ["Holger Schernews"]
license = "LICENSE"
readme = "README.md"
homepage = "https://vyra-entity.github.io/vyra_base_python/"  # Replace with actual URL
repository = "https://github.com/vyra-entity/vyra_base_python.git"  # Replace with actual URL
keywords = ["V.Y.R.A.", "python", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
include = [
    "vyra_base/helper/logger_config.json"
]

[tool.poetry.dependencies]
python = ">=3.12, <4"
aiopath = "^0.6.0"
asyncua = "^1.1.5"
SQLAlchemy = "^2.0.41"
transitions = "^0.9.2"
python-dotenv = "^1.0.0"
tomli = "^2.0.1"
redis-om = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
flake8 = "^3.9"
rclpy = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"