[tool.poetry]
name = "vyra_base"
version = "0.1.8+build.32"
description = "Base library for V.Y.R.A. modules written in Python"
authors = ["Holger Schernewski"]
license = "LICENSE"
readme = "README.md"
homepage = "https://vyra-entity.github.io/vyra_base_python/"  # Replace with actual URL
repository = "https://github.com/vyra-entity/vyra_base_python.git"  # Replace with actual URL
keywords = ["V.Y.R.A.", "python", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
include = [
    "vyra_base/helper/logger_config.json",
    "vyra_base/interfaces/package.xml",
    "vyra_base/interfaces/CMakeLists.template.txt",
    "vyra_base/interfaces/msg/*.msg",
    "vyra_base/interfaces/srv/*.srv",
    "vyra_base/interfaces/action/*.action",
    "vyra_base/interfaces/config/*.json",
    "vyra_base/interfaces/config/*.xml",
    "vyra_base/interfaces/config/*.yaml"
]

[tool.poetry.dependencies]
python = ">=3.10"
aiopath = "^0.6.0"
asyncua = "^1.1.5"
SQLAlchemy = "^2.0.41"
transitions = "^0.9.2"
python-dotenv = "^1.0.0"
tomli = "^2.0.1"
redis-om = "^0.3.0"
PyYAML = "^6.0.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
flake8 = "^3.9"
rclpy = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"