[metadata]
license_file = LICENSE
name = vyra-base-python
version = 0.1.0
description = Base library for V.Y.R.A. projects written in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Holger Schernewski
author_email = vyra.0a1@gmail.com

[options]
packages = find:
packages_dir =
    = src
include_package_data = true
python_requires = >=3.9

[options.packages_data]
vyra-base-python = 
    interfaces/msg/*.msg
    interfaces/srv/*.srv
    interfaces/action/*.action

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 88

# [flake8]
# ignore = E203, E501, W503
# per-file-ignores =
#     src/vyra_base/__init__.py:E402, F401
    