<?xml version='1.0' encoding='utf-8'?>
<package format="3">
	<name>vyra_module_template_interfaces</name>
	<version>0.1.0</version>
	<description>Python interfaces and helper modules for V.Y.R.A. modules.</description>
	<maintainer email="vyra.0a1@gmail.com">V.Y.R.A.</maintainer>
	<license>Apache-2.0</license>
	
	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>unique_identifier_msgs</build_depend>
	
	<exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>unique_identifier_msgs</exec_depend>
	<exec_depend>rosidl_runtime_py</exec_depend>
	<exec_depend>rosidl_api_introspection_python</exec_depend>
	
	<member_of_group>rosidl_interface_packages</member_of_group>
	
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
